# worldpolicies

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/worldpolicies/: __init__.py  catalog.py  cli.py
tests/: test_catalog.py
