[project]
name = "worldpolicies"
version = "0.1.0"
description = "Robocurve's registry of published robot-policy (VLA) checkpoints"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.scripts]
worldpolicies = "worldpolicies.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.11", "huggingface_hub>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldpolicies"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
strict = true
files = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=worldpolicies --cov-fail-under=100"
testpaths = ["tests"]
