[project]
name = "worldpolicies"
version = "0.1.0"
description = "Robocurve's registry of published robot-policy (VLA) checkpoints"
dynamic = ["readme"]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.scripts]
worldpolicies = "worldpolicies.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.11", "huggingface_hub>=0.24"]

[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme>=24.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldpolicies"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = ["D1"]
ignore = ["D105", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D1"]

[tool.mypy]
strict = true
files = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=worldpolicies --cov-fail-under=100"
testpaths = ["tests"]

# PyPI readme: identical to README.md except GitHub-only alert syntax
# (e.g. `> [!NOTE]`) is rewritten to bold blockquotes, which PyPI renders.
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!NOTE\][ \t]*$'
replacement = '> **Note:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!TIP\][ \t]*$'
replacement = '> **Tip:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!IMPORTANT\][ \t]*$'
replacement = '> **Important:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!WARNING\][ \t]*$'
replacement = '> **Warning:**'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '(?m)^> \[!CAUTION\][ \t]*$'
replacement = '> **Caution:**'
